Select All present even all selectable text has been selected

When you right click in an empty text box "Select All" isn't grayed out. Also if you
were to use select all to select all text and then right click you "Select All"
would not be grayed out even though all text is already selected. This will also be
used in fixing Clank bug: crbug.com/615435

BUG=696134

Review-Url: https://codereview.chromium.org/2712603007
Cr-Commit-Position: refs/heads/master@{#457617}

Former-commit-id: c9178af4426d3a2fc543bd77e929cea2562d8d4c